TEST_PROGRAMS/VALID/05/for_inf_loop.go
/* Loops */

package main

func main() {
	for {
		break
	}
}
