TEST_PROGRAMS/INVALID/15/weeding3.go
package error

func f(){
    break
}
